package com.qiding.design;

public class SubSystem1 {
    protected void  method1(){
        System.out.println("method1");
    }
}
