package com.qiding.design;

public class SubSystem2 {
    protected void  method1(){
        System.out.println("method2");
    }
}
