package com.qiding.design;

public class SubSystem3 {
    protected void  method1(){
        System.out.println("method3");
    }
}
